# sdig

./: CHANGES  INSTALL  Makefile  Makefile.in  NEWS  README  TIPS  TODO  common.c  common.h  configure  configure.in  sdig.8  sdig.c  sdig.conf  sdig.conf.5  sdig.h  snmpget.c  snmpget.h
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  kwick-sdig.default.ex  kwick-sdig.doc-base.EX  mactable  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sdig.conf  watch.ex
include/: config.h.in  version.h
